--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:VH4NsBno6HD+yucmUn8JP21qTPb7bn+D8yOYoUzOdjM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=admin_inglesxdia
+DB_DATABASE=admin_idiomary
 DB_USERNAME=root
 DB_PASSWORD=
 
